modified code to allow for integration with herbivory component

--- a/marsh_herbivory_surviability.ipynb
+++ b/marsh_herbivory_surviability.ipynb
@@ -4,22 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tidal flow and vegetation interactions\n",
+    "# Modeling marsh herbivor effects on marsh surviability.\n",
     "\n",
     "*(modified from Greg Tucker, August 2020)*\n",
     "\n",
-    "This tutorial explains how the `TidalFlowCalculator` Landlab component can be combined with a range of vegetation modeling approaches to describe salt marsh dynamics. We will start with the simplest vegetation formulation and then add complexity to see how the results change. Depending on the simulation temporal scale, sometimes the differences between vegetation modeling approaches may not affect the results but over time, the integrated ecogeomorphic dynamics become more pronounced and more sophisticated models of vegetation become necessary to capture the role of plants in the salt marsh system."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Theory\n",
-    "\n",
-    "The `TidalFlowCalculator` computes a tidal-cycle averaged flow velocity field, given a topography (bathymetry), mean sea level, tidal range, and tidal period. The approach that the component uses is based on Mariotti (2018). The idea is to calculate a flow velocity field that is just sufficient to bring in (flood tide) or send out (ebb tide) all of the water that enters or leaves the system during one tidal cycle. We will not discuss the numerical background of this component here. For more information, see the Tidal Flow Calculator Landlab tutorial.\n",
-    "\n",
-    "In reality, tidal flow across a wetland landscape depends on the underlying bathymtery and roughness that is largely self-organized by ecological processes. Salt marsh environments are a mosaic of marsh plains, tidal channels, and unvegetated pools. The interaction of tides, waves, and storms and the resultant sediment transport which occur at temporal timescales on the order of seconds to hours interact with biogeochemical and ecological processes which occur at timescales on the order of days to years to form and maintain this unique ecotone."
+    "This tutorial takes the parts that have previously been demonstrated in the marsh grass herbivory and tidal_flow_with_veg tutorials.  We will use the random herbivory of the agent based model to stear the roughness calculations in the tidalFlowCalculator and examin how these changes lead to reponsense in the marsh morphology. "
    ]
   },
   {
@@ -28,7 +17,174 @@
    "source": [
     "# Creating the domain\n",
     "\n",
-    "First we will start with a simple gridded domain that consists of a flat marsh plain intersected by a single channel, identical to a case presented in the Tidal Flow Calculator tutorial. The first codeblocks import the libraries we will need and create our plotting functions."
+    "Previously we have made an numerically generated domain for the purposes of the example. However, we will now import a digital elevation model (DEM) to act as the basis of our Landlab model grid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import numpy as np\n",
+    "from pyMM2D.pymarshmorpho2d import pymm2d\n",
+    "from tqdm import tqdm\n",
+    "import rasterio as rio\n",
+    "import os\n",
+    "from pymarshmorpho2d import pyMM2DUtilities as pu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(os.getcwd())\n",
+    "\n",
+    "grid_raster = 'examples/Gull_Island_10meter.asc' # import DEM\n",
+    "\n",
+    "(grid, topo) = read_esri_ascii(grid_raster, name='topographic__elevation') # setup topographic elevation and grid\n",
+    "topo[topo == -9999] = np.nan # -9999 was used as the 'na' indictor when the DEM was generated. \n",
+    "grid.set_nodata_nodes_to_closed(topo, -9999)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup the model domain\n",
+    "\n",
+    "It is necessary to setup a model domain to control where erodable areas exist in the model and where unerodible area exist. We also use the \"grid.set_closed_boundaries_at_grid_edges\" to define areas that are closed to tidal flow. This will limit the domain edgest that tidalFlowCalculator will use for its calculations. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(topo.shape)\n",
+    "model_domain = np.copy(topo)\n",
+    "model_domain[:] = 1\n",
+    "\n",
+    "##################################\n",
+    "# grid boundaries\n",
+    "grid.set_closed_boundaries_at_grid_edges(right_is_closed=True,\n",
+    "                                               top_is_closed=False,\n",
+    "                                               left_is_closed=False,\n",
+    "                                               bottom_is_closed=True)\n",
+    "\n",
+    "\n",
+    "def complete_domain(model_domain):\n",
+    "    checkDomain = np.reshape(model_domain, grid.shape)\n",
+    "    domainIndex = np.reshape(range(0,len(model_domain)), grid.shape)\n",
+    "    if len(checkDomain[checkDomain[:,0] == 2]) == len(checkDomain[:,0])-2:\n",
+    "        print(\"The model is open along the left edge\")\n",
+    "        checkDomain[:,0] = 2\n",
+    "    if len(checkDomain[checkDomain[:,-1] == 2]) == len(checkDomain[:,-1])-2:\n",
+    "        print(\"The model is open along the Right edge\")\n",
+    "        checkDomain[:,-1] = 2\n",
+    "    updated_bndry_nodes = domainIndex[checkDomain ==2]\n",
+    "    return(checkDomain, updated_bndry_nodes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We previously showed that no data areas were listed as -9999 and will be ignored in the model. We can also purposefully set areas to \"closed\" areas where nothing can flow or be eroded. This is useful if you have boundaries that "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_domain, bndryNodes = complete_domain(model_domain)\n",
+    "boundaryTopo = topo.flatten()[bndryNodes]\n",
+    "# # testing closing some of the boundaries.\n",
+    "# model_domain[-50:,0] = 50 # this is just testing if this closes the boundaries.\n",
+    "# model_domain[-1,-75:] = 50\n",
+    "# model_domain[-1,:50] = 50\n",
+    "# grid.set_nodata_nodes_to_closed(np.array(model_domain).flatten(), 50)\n",
+    "model_domain[bndryNodes] = 2 # set boundary nodes to NA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test RSLR senarios \n",
+    "\n",
+    "MarshMorpho2D allows for testing different sea level rise rates. We have coded a function with three Realtive Sea Level Rise (RSLR) senarios that are predicted by USACE. We can toggle a hyper parameter \"senario\" between \"Hight\", \"Medium\" and \"Low\" to look at how marshes will survive differently. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####### RSLR scenarios ######################################################################\n",
+    "def USACE_SLR_Senarios(senario, rnd):\n",
+    "    # this assumes a starting year of 2020\n",
+    "    x = rnd + 2020\n",
+    "    if senario == 'High':\n",
+    "        y = (-4.11*10**-3)*x**2 + 17.049*x - 17661\n",
+    "    elif senario == 'Medium':\n",
+    "        y = (-2.5644*10**-3)*x**2 + 10.639*x - 11022\n",
+    "    else:\n",
+    "        y = ((-1.3623*10**-3)*x**2 + 5.6493*x - 5847.5)\n",
+    "    return(y) # this is the predicted slr in mm. The above equations are already in mm\n",
+    "############################################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup herbivory\n",
+    "\n",
+    "We will use the agent based random herbivory from the marsh grass herbivory example to drive biomass reduction. Grazed vegetation will have lower roughness values and will be subject to reduced accretion. To do this we have modified the MarshMorpho2D script to accept the hervibory function. Vegetation coverage is calculated by the Coastal Wetland Equilibrium Model. The resulting area is then augmented by grazing before being sent to the roughness calculator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mev = pyMM2D(grid, model_domain=model_domain, boundaryValues = boundaryTopo, runMEM=True)\n",
+    "\n",
+    "versions = ['High', 'Medium', 'Low']\n",
+    "\n",
+    "v = versions[1] # remember python starts counting from 0. For example 1 indicates the \"Medium\" model will be run.\n",
+    "\n",
+    "# RUN the model #####################################################################################\n",
+    "\n",
+    "print(\"Starting main loop\")\n",
+    "for i in tqdm(range(50), colour = \"green\"):\n",
+    "    slr = USACE_SLR_Senarios(v, rnd = i)\n",
+    "    mev.run_one_step(timeStep = 1, round = i, model_domain = model_domain, relative_sea_level_rise_rate_mmPerYr = slr,\n",
+    "                     saveModelParamsFile = fldir) # dt is a sea level rate modifier.\n",
+    "    grid.at_node[\"topographic__elevation\"] = mev._elev\n",
+    "    if i == 0:\n",
+    "        testEle = (mev._elev)\n",
+    "print(f'The MSL at the end of the model run was {mev._mean_sea_level}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"Script Complete\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the last line of current code. Work above this line."
    ]
   },
   {
