Added some additional markdown

--- a/marsh grass herbivory.ipynb
+++ b/marsh grass herbivory.ipynb
@@ -1017,12 +1017,11 @@
     "Run the integrated model in a time loop. Our algorithm performs the following sequence of calculations in each iteration:\n",
     "\n",
     "- Get a copy of the current grass status as a 2D array\n",
-    "- Update the soil-creep coefficient Landlab field according to the grass status and the soil thickness\n",
-    "- Run soil creep for one time step and update the soil thickness (we could have used a DepthDependentLinearDiffuser for this, but here a simpler approach will suffice)\n",
-    "- Set grass in any cells with insufficient soil to be non-fully-grown\n",
-    "- Run the wolf-sheep-grass model for one time step\n",
+    "- Update the biomass array according to the grass status from Mesa and the inundation time\n",
+    "- Run tidal flow and accretion processes to update the grid\n",
+    "- Run the herbivore-grass model for 12 time steps\n",
     "\n",
-    "The data exchange happens in two function calls. `generate_grass_map` translates grass status data from the Mesa model's data structure to a Landlab field, and `limit_grass_by_soil` translates Landlab's soil thickness field into a restriction on grass status in the Mesa model's GrassPatch agents."
+    "The data exchange happens in two function calls. `generate_grass_map` translates grass status data from the Mesa model's data structure to a Landlab field, and `update_max_grass_by_inundation` translates the max biomass field defined by inundation into a restriction on grass status in the Mesa model's GrassPatch agents."
    ]
   },
   {
@@ -1060,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next few plots examine the results to illustrate how the interaction of soil creep and grass consumption by mobile agents (sheep) has influenced the landscape:"
+    "The next few plots examine the results to illustrate how the interaction of vegetation, grazing, and tidal flow interact to influence the landscape. Note we do not look at the effects of changing tidal velocities on erosion in this example. "
    ]
   },
   {
@@ -1082,13 +1081,6 @@
     "    cmap=\"coolwarm_r\",\n",
     "    colorbar_label=\"Depth of soil accumulation (+) or loss (-), m\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Click here for more <a href=\"https://landlab.readthedocs.io/en/latest/user_guide/tutorials.html\">Landlab tutorials</a>"
    ]
   }
  ],
