minor text edits

--- a/marsh_herbivory_surviability.ipynb
+++ b/marsh_herbivory_surviability.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Creating the domain\n",
     "\n",
-    "Previously we have made an numerically generated domain for the purposes of the example. However, we will now import a digital elevation model (DEM), in .asc format, to act as the basis of our Landlab model grid."
+    "Previously we have made an numerically generated domain for the purposes of the example. However, we will now import a digital elevation model (DEM), in .asc format, to act as the basis of our Landlab model grid. This file will also determine or grid density."
    ]
   },
   {
